[package]
name = "dice"
version = "0.2.0"
authors = ["Brian McCallister <brianm@skife.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
structopt = "0.3.5"
nom = "6.1.2"
pest = "2.1.2"
pest_derive = "2.1.0"
anyhow = "1.0.25"
exitfailure = "0.5.1"
proptest = "1.0.0"
rustyline = "7.1.0"
