[package]
name = "dice"
version = "0.5.0"
authors = ["Brian McCallister <brianm@skife.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
structopt = "0.3.5"
pest = "2.7.1"
pest_derive = "2.7.1"
anyhow = "1.0.25"
exitfailure = "0.5.1"
proptest = "1.2.0"
rustyline = "12.0.0"
clap = "4.3.15"
rayon = "1.5.0"
