[package]
name = "dice"
version = "0.6.0"
authors = ["Brian McCallister <brianm@skife.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9"
pest = "2.7.1"
pest_derive = "2.7"
anyhow = "1.0"
proptest = "1.2"
rustyline = "15.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.5"
